tests/ui/closures/closure-move-sync.stderr
error[E0277]: `{closure@$DIR/closure-move-sync.rs:6:27: 6:29}` cannot be sent between threads safely
  --> $DIR/closure-move-sync.rs:6:27
   |
LL |       let t = thread::spawn(|| {
   |  _____________-------------_^
   | |             |
   | |             required by a bound introduced by this call
LL | |         recv.recv().unwrap();
LL | |
LL | |     });
   | |_____^ `{closure@$DIR/closure-move-sync.rs:6:27: 6:29}` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for closure `{closure@$DIR/closure-move-sync.rs:6:27: 6:29}`, which is required by `{closure@$DIR/closure-move-sync.rs:6:27: 6:29}: Send`
   = note: required for `&std::sync::mpsc::Receiver<()>` to implement `Send`
note: required because it's used within this closure
  --> $DIR/closure-move-sync.rs:6:27
   |
LL |     let t = thread::spawn(|| {
   |                           ^^
note: required by a bound in `spawn`
  --> $SRC_DIR/std/src/thread/mod.rs:LL:COL
help: use parentheses to call this closure
   |
LL |     }());
   |      ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
